# web-e2e-pytest-template

./: README.md  main.py  pyproject.toml  pytest.ini
api/: delete_httpbin.py  get_auth_session.py  get_cookies_httpbin.py  get_downloadimage.py  get_httpbin.py  get_randomuser.py  post_headers_httpbin.py  post_httpbin.py  put_httpbin.py
src/: calc.py  controller.py
tests/: test_calc.py  test_controller.py
tests/reports/: results
