[project]
name = "web-e2e-pytest-template"
version = "0.1.0"
description = "\"Pytest template\""
authors = [
    {name = "Leandro Barros",email = "leandjb@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "selenium (>=4.29.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
