[tool.poetry]
name = "web-e2e-pytest-template"
version = "0.1.0"
description = "templates for e2e and api testing"
authors = ["Leandro Barros <leandjb@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
typing-extensions = "^4.12.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
